--- a/V4/styles.css
+++ b/V4/styles.css
@@ -260,17 +260,28 @@ section1{
     body>section>img3>img{
   
       margin-top: 3%;
-      margin-left: 3%;
+      margin-left: 5%;
       margin-bottom: 3%;
       padding: 1%;
       float: left;
       background-color: #2b2120ff;
       border-radius: 10px;
       box-shadow: hsl(35, 35%, 50%) 0px 20px 20px;} 
-      
+
+      section3{
+        color: #ffffff;
+        width: 45%;
+        margin-top: 3%;
+        padding-right: 500px;
+        padding: 30px;
+        float: right;
+        background-color: #2b2120ff;
+        border-radius: 5%;
+        box-shadow: hsl(35, 35%, 50%) 0px 20px 20px;}
+
       body>section>img4>img{
   
-        margin-top: 3%;
+        margin-top: 0%;
         margin-left: 3%;
         margin-bottom: 3%;
         margin-right: 97%;
@@ -280,16 +291,14 @@ section1{
         border-radius: 10px;
         box-shadow: hsl(35, 35%, 50%) 0px 20px 20px;} 
 
-    section3{
-      color: #ffffff;
-      width: 45%;
-      margin-top: 3%;
-      padding-right: 500px;
-      padding: 30px;
-      float: right;
-      background-color: #2b2120ff;
-      border-radius: 5%;
-      box-shadow: hsl(35, 35%, 50%) 0px 20px 20px;}
+      section4{
+        width: 45%;
+        margin-top: 3%;
+        padding-right: 500px;
+        padding: 30px;
+        float: right;
+        }
+      
 
 
   div.row{margin: 3%;}
