--- a/V4/styles.css
+++ b/V4/styles.css
@@ -194,8 +194,8 @@ below I have demonstrated an element with an absolute position with a sticky foo
 
   p{
     font-family: brandon-grotesque, sans-serif;
-    font-weight: 700;
-    font-size: large;
+    font-weight: 00;
+    font-size: larger;
     text-align: center;}
 
   
@@ -261,7 +261,7 @@ section1{
   
       margin-top: 3%;
       margin-left: 5%;
-      margin-bottom: 3%;
+      margin-bottom: 0%;
       padding: 1%;
       float: left;
       background-color: #2b2120ff;
@@ -271,7 +271,8 @@ section1{
       section3{
         color: #ffffff;
         width: 45%;
-        margin-top: 3%;
+        margin-top: 0%;
+        margin-bottom: -15%;
         padding-right: 500px;
         padding: 30px;
         float: right;
@@ -282,23 +283,35 @@ section1{
       body>section>img4>img{
   
         margin-top: 0%;
-        margin-left: 3%;
-        margin-bottom: 3%;
+        margin-left: 5%;
+        margin-bottom: 10%;
         margin-right: 97%;
         padding: 1%;
         float: left;
         background-color: #2b2120ff;
         border-radius: 10px;
         box-shadow: hsl(35, 35%, 50%) 0px 20px 20px;} 
-
-      section4{
-        width: 45%;
-        margin-top: 3%;
-        padding-right: 500px;
-        padding: 30px;
-        float: right;
-        }
       
+        iframe{
+          display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 15px solid #4c4730;
+    box-shadow: hsl(35, 35%, 50%) 0px 20px 20px;
+    border-radius: 10% ;}
 
+    img[src="silly.jpg"] {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      border: 15px solid #4c4730;
+      width: 25%;
+      box-shadow: hsl(35, 35%, 50%) 0px 20px 20px;
+      border-radius: 10% ;}
+
+body>section>body{
+  font-weight: 400;
+  font-size: large;
+}
 
   div.row{margin: 3%;}
