--- a/webdesign/v1/styles.css
+++ b/webdesign/v1/styles.css
@@ -24,7 +24,7 @@ h1 {
 
 header {
   text-align: center;
-  font-size: 30px;
+  font-size: 200%;
   margin: 0;
   font-weight: 300;
   color: inherit;
@@ -74,6 +74,7 @@ nav ul li a {
   font-weight: 500;
   text-transform: uppercase;
   margin: 0 10px;
+  font-size: relative;
 }
 
 /*underline animation*/
