--- a/webdesign/v1/styles.css
+++ b/webdesign/v1/styles.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 600px) {
+@media only screen and (orientation: landscape) {
   body {
     background-color: lightblue;
   }
