--- a/webdesign/v1/styles.css
+++ b/webdesign/v1/styles.css
@@ -13,6 +13,8 @@ body {
   font-family: 'Roboto', sans-serif;
   padding: 0;
   margin: 0;
+
+  box-sizing: border-box;
 }
 
 h1 {
@@ -57,8 +59,7 @@ nav {
 }
 
 /*small section around menu that allows it to stick to top*/
-div.sticky {
-  position: -webkit-sticky;
+#nav-content {
   position: sticky;
   top: 0;
 }
