--- a/webdesign/mobile/styles.css
+++ b/webdesign/mobile/styles.css
@@ -70,7 +70,7 @@ touch-action: manipulation;
 .icon-bar {
 display: block;
 width: 100%;
-height: 5 px;
+height: 5px;
 background: #aaa;
 transition: .3s;
 }
@@ -85,7 +85,7 @@ pointer-events: none;
 }
 /*top of menu button*/
 #nav-container:focus-within .icon-bar:nth-of-type(1) {
-transform: translate3d(0,8px,0) rotate(45deg);
+transform: translate3d(0,10px,0) rotate(45deg);
 width: 90px
 }
 /*middle of menu button*/
@@ -94,16 +94,16 @@ opacity: 0;
 }
 /*bottom of menu button*/
 #nav-container:focus-within .icon-bar:nth-of-type(3) {
-transform: translate3d(0,-8px,0) rotate(-45deg);
+transform: translate3d(0,-10px,0) rotate(-46deg);
 width: 90px;
 }
 
 /*the menu and white block*/
 #nav-content {
-margin-top: 70px;
+margin-top: 5%;
 padding: 20px;
-width: 90%;
-max-width: 300px;
+width: 100%;
+max-width: 600px;
 position: absolute;
 top: 0;
 left: 0;
@@ -124,10 +124,11 @@ flex-direction: column;
 }
 
 #nav-content li a {
-padding: 10px 5px;
+padding: 20px 5px;
 display: block;
 text-transform: uppercase;
 transition: color .1s;
+font-size: 300%
 }
 
 #nav-content li:focus{
@@ -151,6 +152,7 @@ align-self: center;
 font-size: 12px;
 font-weight: 400;
 color: rgb(214, 213, 213);
+font-size: 100%;
 }
 .small a + a {
 margin-left: 15px;
