--- a/webdesign/mobile/styles.css
+++ b/webdesign/mobile/styles.css
@@ -27,7 +27,7 @@ header {
   display: flex;
   position: fixed;
   width: 100%;
-  height: 100px;
+  height: 150px;
   background: #ffffff;
   color: rgb(0, 0, 0);
   justify-content: center;
@@ -44,6 +44,7 @@ header {
 
 /*Menu Button*/
 .button {
+margin-top: 20px;
 position: relative;
 display: flex;
 flex-direction: column;
