--- a/webdesign/mobile/styles.css
+++ b/webdesign/mobile/styles.css
@@ -27,7 +27,7 @@ header {
   display: flex;
   position: fixed;
   width: 100%;
-  height: 150px;
+  height: 10%;
   background: #ffffff;
   color: rgb(0, 0, 0);
   justify-content: center;
@@ -44,7 +44,7 @@ header {
 
 /*Menu Button*/
 .button {
-margin-top: 20px;
+margin-top: 5%;
 position: relative;
 display: flex;
 flex-direction: column;
@@ -70,8 +70,8 @@ touch-action: manipulation;
 /*menu button*/
 .icon-bar {
 display: block;
-width: 60px;
-height: 5px;
+width: 80px;
+height: 10px;
 background: #aaa;
 transition: .3s;
 }
@@ -87,24 +87,25 @@ pointer-events: none;
 /*top of menu button*/
 #nav-container:focus-within .icon-bar:nth-of-type(1) {
 transform: translate3d(0,20px,0) rotate(45deg);
-width: 60px
+width: 100px
 }
 /*middle of menu button*/
 #nav-container:focus-within .icon-bar:nth-of-type(2) {
 opacity: 0;
+width: 80px;
 }
 /*bottom of menu button*/
 #nav-container:focus-within .icon-bar:nth-of-type(3) {
-transform: translate3d(0,-18px,0) rotate(-45deg);
-width: 60px;
+transform: translate3d(0,-25px,0) rotate(-45deg);
+width: 100px;
 }
 
 /*the menu and white block*/
 #nav-content {
-margin-top: 10%;
+margin-top: 20%;
 padding: 20px;
 width: 100%;
-max-width: 600px;
+max-width: 80%;
 position: absolute;
 top: 0;
 left: 0;
@@ -122,15 +123,15 @@ contain: paint;
 height: 100%;
 display: flex;
 flex-direction: column;
-margin-top: 5%;
+margin-top: 10%;
 }
 
 #nav-content li a {
-padding: 20px 5px;
+padding: 60px 10px;
 display: block;
 text-transform: uppercase;
 transition: color .1s;
-font-size: 300%
+font-size: 500%
 }
 
 #nav-content li:focus{
@@ -153,7 +154,7 @@ align-self: center;
 .small a {
 font-size: 12px;
 font-weight: 400;
-color: rgb(214, 213, 213);
+color: rgb(134, 131, 131);
 font-size: 100%;
 }
 .small a + a {
