--- a/webdesign/mobile/styles.css
+++ b/webdesign/mobile/styles.css
@@ -27,7 +27,7 @@ header {
   display: flex;
   position: fixed;
   width: 100%;
-  height: 10%;
+  height: 200px;
   background: #ffffff;
   color: rgb(0, 0, 0);
   justify-content: center;
@@ -44,7 +44,7 @@ header {
 
 /*Menu Button*/
 .button {
-margin-top: 5%;
+margin-top: 50px;
 position: relative;
 display: flex;
 flex-direction: column;
@@ -102,7 +102,7 @@ width: 100px;
 
 /*the menu and white block*/
 #nav-content {
-margin-top: 20%;
+margin-top: 200px;
 padding: 20px;
 width: 100%;
 max-width: 80%;
