--- a/webdesign/mobile/mobilestyles.css
+++ b/webdesign/mobile/mobilestyles.css
@@ -6,6 +6,10 @@ p{
   font-size: 300%;
 }
 
+main{
+  margin-top: 250px;
+}
+
 div.sticky {
   position: sticky;
   top: 0;
@@ -23,6 +27,7 @@ div.sticky {
 
 /*text and box around header*/
 header {
+  margin-top: -250px;
   font-size: 400%;
   display: flex;
   position: fixed;
@@ -44,7 +49,7 @@ header {
 
 /*Menu Button*/
 .button {
-margin-top: 50px;
+margin-top: -200px;
 position: relative;
 display: flex;
 flex-direction: column;
@@ -102,7 +107,7 @@ width: 100px;
 
 /*the menu and white block*/
 #nav-content {
-margin-top: 200px;
+margin-top: -50px;
 padding: 20px;
 width: 100%;
 max-width: 80%;
