--- a/webdesign/v1/styles.css
+++ b/webdesign/v1/styles.css
@@ -22,8 +22,8 @@ main {
 }
 
 section.s1 {
-  color: black;
-  text-shadow: 100px 100px 3px white;
+  color: white;
+  text-shadow: 1px 1px 3px black;
 
   flex: 0 1 50%;
   font-size: 20;
@@ -84,6 +84,7 @@ header {
 /* this is the menu bar at the top of the page*/
 nav {
   width: 100%;
+  height: 70px;
   margin: 0 auto;
   background-color: white;
   padding: 10px 0;
@@ -109,7 +110,7 @@ nav ul li {
 
 /*menu text*/
 nav ul li a {
-  display: flex;
+  display:block;
   padding: 10px;
   text-decoration: none;
   color: rgb(170, 170, 170);
@@ -143,7 +144,7 @@ nav.fill ul li a {
 }
 nav.stroke ul li a:after,
 nav.fill ul li a:after {
-  position: absolute;
+  position:absolute;
   bottom: 0;
   left: 0;
   right: 0;
@@ -152,7 +153,7 @@ nav.fill ul li a:after {
   content: '.';
   color: transparent;
   background: #333;
-  height: 1px;
+  height: 3px;
 }
 nav.stroke ul li a:hover:after {
   width: 100%;
