--- a/webdesign/v1/styles.css
+++ b/webdesign/v1/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: wii;
+  src: url('contm.ttf');
+}
+
 html{
   background-image: url("wiibackground.JPG");
   background-size:cover;
@@ -50,7 +55,10 @@ section.s2 {
 
 h1 {
   text-align: center;
-  padding: 50px 0;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 2%;
+
   font-weight: 800;
   margin: 0;
   letter-spacing: -1px;
@@ -61,16 +69,21 @@ h1 {
 /* By Dominik Biedebach @domobch */
 
 header {
+font-family: wii;
+
   text-align: center;
-  font-size: 200%;
+  font-size: 150px;
   margin: 0;
   font-weight: 300;
   color: inherit;
-  padding: 50px;
+  padding-bottom: 50px;
+  padding-top: 50px;
+
+  padding-right: 10%;
   display: flex;
 
     width: 100%;
-    height: 70px;
+    height:min-content;
 
     color: rgb(0, 0, 0);
     justify-content: center;
@@ -89,7 +102,7 @@ nav {
   background-color: white;
   padding: 10px 0;
 
-  box-shadow: 0 5px 30px rgba(0,0,0,.2);
+  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.493);
   
 }
 
