--- a/webdesign/v1/styles.css
+++ b/webdesign/v1/styles.css
@@ -6,7 +6,8 @@
 html{
   background-image: url("wiibackground.JPG");
   background-size:cover;
- 
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 
@@ -70,6 +71,9 @@ h1 {
 
 header {
 font-family: wii;
+
+box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.432);
+
 
   text-align: center;
   font-size: 150px;
