--- a/webdesign/v1/orderstyles.css
+++ b/webdesign/v1/orderstyles.css
@@ -6,7 +6,8 @@
 html{
   background-image: url("bluewiibackground.JPG");
   background-size:cover;
-
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 
@@ -71,7 +72,7 @@ h1 {
 header {
 font-family: wii;
 
-box-shadow: inset 0 -150px 100px -20px rgb(255, 255, 255), inset  0 -250px 150px -30px rgba(255, 255, 255, 0.466), inset 0 -500px 0px -30px rgba(255, 255, 255, 0.288);
+box-shadow: inset 0 -150px 100px -20px rgb(255, 255, 255), inset  0 -230px 150px -30px rgba(255, 255, 255, 0.466), inset 0 -500px 0px -30px rgba(255, 255, 255, 0.555);
 
   text-align: center;
   font-size: 150px;
