--- a/webdesign/v1/styles.css
+++ b/webdesign/v1/styles.css
@@ -72,8 +72,7 @@ h1 {
 header {
 font-family: wii;
 
-box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.432);
-
+box-shadow: inset 0 -150px 70px -20px rgb(255, 255, 255), inset  0 -280px 100px -30px rgba(255, 255, 255, 0.9), inset 0 -400px 0px -30px rgba(255, 255, 255, 0.288);
 
   text-align: center;
   font-size: 150px;
@@ -83,7 +82,7 @@ box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.432);
   padding-bottom: 50px;
   padding-top: 50px;
 
-  padding-right: 10%;
+  
   display: flex;
 
     width: 100%;
@@ -93,7 +92,10 @@ box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.432);
     justify-content: center;
     align-items: center;
 
+
 }
+
+
 
 
 /* NAVIGATION */
@@ -106,15 +108,24 @@ nav {
   background-color: white;
   padding: 10px 0;
 
-  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.493);
-  
+  box-shadow: 0 80px 80px -20px rgba(0, 0, 0, 0.493);
+
+
 }
 
 /*small section around menu that allows it to stick to top*/
 #nav-content {
   position: sticky;
   top: 0;
+
 }
+
+div .shadow {
+
+
+  box-shadow: 0 500px 10px -200px rgba(0, 0, 0, 0.493);
+
+} 
 
 
 /* By Dominik Biedebach @domobch */
