--- a/webdesign/v1/orderstyles.css
+++ b/webdesign/v1/orderstyles.css
@@ -253,3 +253,49 @@ nav ul li a:before {
 
 
 
+  .identifying label {
+    font-style: italic;
+    display: inline-block;
+    width: 12rem;
+  }
+  
+  label[for="mytext"] {
+    font-weight: bold;
+    color: #444;
+  }
+  
+  textarea#mytext {
+    display: block;
+    width: 90%;
+  }
+  
+  fieldset.identifying {
+    border-radius: .5rem;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #88f;
+    border-style: none;
+    padding: .2rem .5rem;
+    display: inline-block;
+    border-radius: .15rem;
+  }
+
+ul#choices{
+  list-style: none;
+}
+
+input[type=radio] {
+width: 20px;
+height: 20px;
+}
+  input:focus {
+    background-color: rgb(118, 208, 243);
+    animation: myanimation 1.5s infinite
+  }
+  
+  @keyframes myanimation {
+    0% {background-color: white;}
+    50%{background-color: rgb(118, 208, 243)}
+      100% {background-color: white;}
+  }
