--- a/webdesign/v1/styles.css
+++ b/webdesign/v1/styles.css
@@ -72,7 +72,7 @@ h1 {
 header {
 font-family: wii;
 
-box-shadow: inset 0 -150px 70px -20px rgb(255, 255, 255), inset  0 -280px 100px -30px rgba(255, 255, 255, 0.9), inset 0 -400px 0px -30px rgba(255, 255, 255, 0.562);
+box-shadow: inset 0 -150px 70px -20px rgb(255, 255, 255), inset  0 -280px 100px -30px rgba(255, 255, 255, 0.562), inset 0 -400px 0px -30px rgba(255, 255, 255, 0.308);
 
   text-align: center;
   font-size: 150px;
@@ -280,3 +280,27 @@ nav ul li a:before {
     display: inline-block;
     border-radius: .15rem;
   }
+
+
+
+
+
+
+
+
+
+
+  #background {
+    width: 130%; 
+    height: 130%; 
+    position: fixed; 
+    top: -100px;
+    left:-160px;
+    z-index: -1;
+    opacity: 0.5;
+}
+
+.stretch {
+    width:100%;
+    height:100%;
+}
