--- a/webdesign/v1/thankyou.css
+++ b/webdesign/v1/thankyou.css
@@ -4,7 +4,7 @@
 }
 
 html{
-  background-image: url("bluewiibackground.JPG");
+  background-image: url("blackwiibackground.JPG");
   background-size:cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -56,14 +56,14 @@ section.s2 {
 
 h1 {
   text-align: center;
-  padding-top: 50px;
+  padding-top: 100px;
   padding-bottom: 50px;
   padding-left: 2%;
 
   font-weight: 800;
   margin: 0;
   letter-spacing: -1px;
-  color: inherit;
+  color: white;
   font-size: 40px;
 }
 
@@ -72,7 +72,7 @@ h1 {
 header {
 font-family: wii;
 
-box-shadow: inset 0 -150px 100px -20px rgb(255, 255, 255), inset  0 -230px 150px -30px rgba(255, 255, 255, 0.466), inset 0 -500px 0px -30px rgba(255, 255, 255, 0.555);
+box-shadow: inset 0 -150px 100px -20px rgb(255, 255, 255), inset  0 -200px 100px -30px rgba(255, 255, 255, 0.466), inset 0 -500px 0px -30px rgba(255, 255, 255, 0.288);
 
   text-align: center;
   font-size: 150px;
@@ -247,57 +247,43 @@ nav ul li a:before {
 
 
 
+.buttonHolder{ text-align: center; }
 
 
 
-
-
-
-  .identifying label {
-    font-style: italic;
-    display: inline-block;
-    width: 12rem;
-  }
-  
-  label[for="mytext"] {
-    font-weight: bold;
-    color: #444;
-  }
-  
-  textarea#mytext {
-    display: block;
-    width: 90%;
-  }
-  
-  fieldset.identifying {
-    border-radius: .5rem;
-  }
-  
-  input[type="submit"]:hover {
-    background-color: #88f;
-    border-style: none;
-    padding: .2rem .5rem;
-    display: inline-block;
-    border-radius: .15rem;
+  input[type="submit"]{
+    height: 100px;
+    width: 300px;
+    font-size: x-large;
   }
 
-ul#choices{
-  list-style: none;
-}
 
-input[type=radio] {
-width: 20px;
-height: 20px;
-}
   input:focus {
-    background-color: rgb(118, 208, 243);
+    background-color: #88f;
     animation: myanimation 1.5s infinite
   }
-  
-  @keyframes myanimation {
-    0% {background-color: white;}
-    50%{background-color: rgb(118, 208, 243)}
-      100% {background-color: white;}
+
+  input[type="submit"]{
+    background-image: url("glossybutton.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 120% 130%;
+
+    border-radius: 20px;
+    border-color: aqua;
+  }
+
+  input[type="submit"]:hover {
+    height: 102px;
+    width: 306px;
+
+    background-image: url("glossybutton.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 120% 130%;
+
+    border-radius: 20px;
+    border-color: aqua;
   }
 
 
@@ -305,17 +291,5 @@ height: 20px;
 
 
 
-  #background {
-    width: 130%; 
-    height: 130%; 
-    position: fixed; 
-    top: -100px;
-    left:-160px;
-    z-index: -1;
-    opacity: 0.2;
-}
 
-.stretch {
-    width:100%;
-    height:100%;
-}
+
