--- a/webdesign/v1/orderstyles.css
+++ b/webdesign/v1/orderstyles.css
@@ -61,7 +61,7 @@ h1 {
   padding-left: 2%;
 
   font-weight: 800;
-  margin: 0;
+  margin-top: 10%;
   letter-spacing: -1px;
   color: inherit;
   font-size: 40px;
@@ -246,6 +246,16 @@ nav ul li a:before {
 
 
 
+
+
+
+
+
+
+
+
+
+
 legend{
   text-align: center;
   font-family: wii;
@@ -254,9 +264,16 @@ legend{
   margin-bottom: 5%;
 }
 
-.buttonHolder{ text-align: center; }
+.buttonHolder{ text-align: center; 
+margin-bottom: 8%;}
 
 
+label{
+  font-size: xx-large;
+  padding-top: 10%;
+  padding-right: 20%;
+  padding-left: 15%;
+}
 
 
   .textbox label {
@@ -265,46 +282,100 @@ legend{
     width: 12rem;
   }
   
-  label[for="mytext"] {
-    font-weight: bold;
-    color: #444;
-  }
   
   textarea#mytext {
     display: block;
     width: 90%;
   }
   
+
+
+
   input[type="submit"]{
     height: 100px;
     width: 300px;
     font-size: x-large;
-  }
- 
-  input[type="reset"]{
-    height: 100px;
-    width: 300px;
-    font-size: x-large;
-  }
-  
-  input[type="submit"]:hover {
-    background-color: #88f;
-    border-style: none;
-    display: inline-block;
-    border-radius: .15rem;
-    align-items: center;
+
+
+    background-image: url("glossybutton.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 120% 130%;
+
+  border-radius: 20px;
   }
 
+  input[type="submit"]:hover {
+    display: inline-block;
+    align-items: center;
+
+
+      height: 100px;
+      width: 300px;
+    
+      background-image: url("glossybutton.png");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 120% 130%;
+    
+      border-radius: 20px;
+    }
+  
+
+
+
+ 
+ 
+    input[type="reset"]{
+      height: 100px;
+      width: 300px;
+      font-size: x-large;
+  
+  
+      background-image: url("glossybutton.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 120% 130%;
+  
+    border-radius: 20px;
+    }
+  
+    input[type="reset"]:hover {
+      box-shadow: inset 0 0 0 1000px rgba(77, 110, 255, 0.432);
+
+      display: inline-block;
+      align-items: center;
+  
+  
+        height: 100px;
+        width: 300px;
+      
+        background-image: url("glossybutton.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 120% 130%;
+      
+        border-radius: 20px;
+        
+      }
+  
+ 
+
 ul#choices{
-  list-style: none;
-  font-size: larger;
+  list-style:none;
+  font-family: wii;
+  font-size: 43px;
   line-height: 20%;
+  
 }
 
 
 input[type=radio] {
 width: 50px;
 height: 50px;
+margin-right: 20px;
+margin-bottom: 5%;
+vertical-align: middle;
 }
   input:focus {
     background-color: rgb(118, 208, 243);
@@ -336,3 +407,12 @@ height: 50px;
     width:100%;
     height:100%;
 }
+
+
+
+
+
+
+
+
+
