--- a/webdesign/v1/orderstyles.css
+++ b/webdesign/v1/orderstyles.css
@@ -270,9 +270,30 @@ margin-bottom: 8%;}
 
 label{
   font-size: xx-large;
-  padding-top: 10%;
-  padding-right: 20%;
-  padding-left: 15%;
+
+   text-align: center;
+}
+
+
+
+input[type=text]{
+  width: 80%;
+  text-align: center;
+  font-size: x-large;
+}
+
+input[type=email]{
+  width: 80%;
+  text-align: center;
+  font-size: x-large;
+}
+
+
+
+.textbox{
+  flex:inherit;
+  font-size: 20;
+  text-align: center;
 }
 
 
@@ -285,12 +306,22 @@ label{
   
   textarea#mytext {
     display: block;
-    width: 90%;
   }
   
 
 
 
+
+
+
+
+
+
+
+
+
+
+  
   input[type="submit"]{
     height: 100px;
     width: 300px;
@@ -305,7 +336,10 @@ label{
   border-radius: 20px;
   }
 
+
   input[type="submit"]:hover {
+    box-shadow: inset 0 0 0 1000px rgba(35, 184, 243, 0.432);
+
     display: inline-block;
     align-items: center;
 
@@ -319,7 +353,29 @@ label{
       background-size: 120% 130%;
     
       border-radius: 20px;
+      
     }
+
+
+    input[type="submit"]:active {
+      box-shadow: inset 0 0 0 1000px rgba(48, 115, 141, 0.432);
+
+      display: inline-block;
+      align-items: center;
+  
+  
+        height: 100px;
+        width: 300px;
+      
+        background-image: url("glossybutton.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 120% 130%;
+      
+        border-radius: 20px;
+        
+      }
+
   
 
 
@@ -341,7 +397,7 @@ label{
     }
   
     input[type="reset"]:hover {
-      box-shadow: inset 0 0 0 1000px rgba(77, 110, 255, 0.432);
+      box-shadow: inset 0 0 0 1000px rgba(35, 184, 243, 0.432);
 
       display: inline-block;
       align-items: center;
@@ -358,8 +414,42 @@ label{
         border-radius: 20px;
         
       }
+      input[type="reset"]:active {
+        box-shadow: inset 0 0 0 1000px rgba(48, 115, 141, 0.432);
+  
+        display: inline-block;
+        align-items: center;
+    
+    
+          height: 100px;
+          width: 300px;
+        
+          background-image: url("glossybutton.png");
+          background-repeat: no-repeat;
+          background-position: center;
+          background-size: 120% 130%;
+        
+          border-radius: 20px;
+          
+        }
   
  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ul#choices{
   list-style:none;
