--- a/webdesign/v1/orderstyles.css
+++ b/webdesign/v1/orderstyles.css
@@ -270,8 +270,8 @@ margin-bottom: 8%;}
 
 label{
   font-size: xx-large;
-
    text-align: center;
+   margin-top: 5%;
 }
 
 
@@ -280,12 +280,14 @@ input[type=text]{
   width: 80%;
   text-align: center;
   font-size: x-large;
+  margin-bottom: 10%;
 }
 
 input[type=email]{
   width: 80%;
   text-align: center;
   font-size: x-large;
+  margin-bottom: 5%;
 }
 
 
