--- a/webdesign/v1/budgetstyles.css
+++ b/webdesign/v1/budgetstyles.css
@@ -25,6 +25,9 @@ main {
   flex-direction: row-reverse;
   justify-content: space-evenly;
   margin: auto 0;
+  margin-bottom: 20%;
+  
+
 }
 
 section.s1 {
@@ -40,12 +43,20 @@ section.s1 {
   background-size:cover;
   border-radius: 10px;
   padding: 5px;
-  
-  
+  margin-left: 5%;
+  margin-right: 5%;
+
 }
+
+section.s1 p{
+  font-size: x-large;
+  }
+
 section.s2 {
-  flex: 0 1 35%;
+  flex: 0 1 50%;
   font-size: 20;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 
@@ -61,7 +72,7 @@ h1 {
   padding-left: 2%;
 
   font-weight: 800;
-  margin: 0;
+  margin-top: 10%;
   letter-spacing: -1px;
   color: inherit;
   font-size: 40px;
@@ -265,4 +276,42 @@ nav ul li a:before {
 .stretch {
     width:100%;
     height:100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+table.data3x4{
+  border: 10px outset rgb(150,150,150);
+  border-spacing: 0px;
+}
+
+td{
+text-align: center;
+color: white;
+text-shadow: #333;
+font-family: wii;
+height: 50px;
+}
+
+table.data3x4 td, table.data3x4 th{
+  border:1px solid rgba(118, 208, 243, 112);
+  padding: .5rem;
+  width: 8rem;
+  background-color: rgba(94, 94, 94, 0.521);
+}
+
+table.data3x4 thead *{
+background-color: rgba(118, 208, 243, 0.493);
+}
+
+table.data3x4 tbody tr:nth-child(even) td{
+  background-color: rgba(0, 0, 0, 0.486);
 }
