--- a/webdesign/v1/styles.css
+++ b/webdesign/v1/styles.css
@@ -25,6 +25,7 @@ main {
   flex-direction: row-reverse;
   justify-content: space-evenly;
   margin: auto 0;
+  margin-bottom: 10%;
 }
 
 section.s1 {
@@ -40,12 +41,35 @@ section.s1 {
   background-size:cover;
   border-radius: 10px;
   padding: 5px;
+  margin-right: 10% ;
   
   
 }
+
+section.s1 p{
+font-size: x-large;
+}
+
+
 section.s2 {
-  flex: 0 1 35%;
+  color: white;
+  text-shadow: 1px 1px 3px black;
+
+  flex: 0 1 50%;
   font-size: 20;
+  
+  background-image: url("wiis.jpg"); 
+  background-size: cover;
+
+  
+  border: 10px solid rgb(0, 0, 0) ;
+  background-size:cover;
+  border-radius: 10px;
+  margin-right: 5%;
+  margin-left: 10%;
+
+  height: 30vw;
+  
 }
 
 
