--- a/webdesign/v1/styles.css
+++ b/webdesign/v1/styles.css
@@ -48,6 +48,11 @@ section.s1 {
 
 section.s1 p{
 font-size: x-large;
+margin-top: 10%;
+margin-bottom: 10%;
+padding-right: 5% ;
+padding-left: 5% ;
+
 }
 
 
@@ -328,3 +333,14 @@ nav ul li a:before {
     width:100%;
     height:100%;
 }
+
+
+footer{color: black;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height: 4%;
+  width: 100%;
+  border: 10%;
+  background-color:rgb(255, 255, 255) ;
+  text-align: center;}
